// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<ControlledInput
  disabled={false}
  labelText="checkbox"
  required={false}
  testId="ctf-ui-checkbox"
  type="checkbox"
  willBlurOnEsc={true}
/>
`;

exports[`renders the component with an additional class name 1`] = `
<ControlledInput
  className="my-extra-class"
  disabled={false}
  labelText="checkbox"
  required={false}
  testId="ctf-ui-checkbox"
  type="checkbox"
  willBlurOnEsc={true}
/>
`;
